[gd_scene load_steps=21 format=2]

[ext_resource path="res://dataCode/ConfigMenu.gd" type="Script" id=1]
[ext_resource path="res://dataFile/fonts/kenvector_future_thin.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://dataFile/fonts/VCR_OSD_MONO_1.001.ttf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 2 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[sub_resource type="Theme" id=3]

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.478431, 0.784314, 1, 0.392157 )

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="DynamicFont" id=7]
size = 40
use_mipmaps = true
use_filter = true
font_data = ExtResource( 4 )

[sub_resource type="Animation" id=8]
resource_name = "InText"
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:rect_position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 940, -0.25, 0, 0.25, 0, 940, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath(".:rect_position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( -95, -0.25, 0, 0.25, 0, 520, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}

[sub_resource type="Animation" id=9]
resource_name = "OutText"
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:rect_position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 940, -0.25, 0, 0.25, 0, 940, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath(".:rect_position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 520, -0.25, 0, 0.25, 0, -95, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}

[sub_resource type="DynamicFont" id=10]
size = 50
use_mipmaps = true
use_filter = true
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxEmpty" id=11]

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 0.196078, 0.521569, 0.666667, 1 )

[sub_resource type="StyleBoxEmpty" id=13]

[sub_resource type="StyleBoxEmpty" id=14]

[sub_resource type="DynamicFontData" id=15]
font_path = "res://dataFile/fonts/SFProDisplay-Heavy.ttf"

[sub_resource type="DynamicFont" id=16]
size = 35
use_mipmaps = true
use_filter = true
font_data = SubResource( 15 )

[sub_resource type="StyleBoxEmpty" id=17]

[node name="ConfigMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -4.0
margin_top = -2.0
margin_right = -4.0
margin_bottom = -2.0
theme = SubResource( 2 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false,
"_edit_vertical_guides_": [ 960.0 ]
}

[node name="All" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -635.0
margin_right = 20.0
margin_bottom = -595.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ReturnButton" type="Button" parent="All"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -151.888
margin_top = 30.0
margin_right = 148.112
margin_bottom = 80.0
theme = SubResource( 3 )
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
custom_fonts/font = SubResource( 7 )
text = "Voltar"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="All"]
anims/InText = SubResource( 8 )
anims/OutText = SubResource( 9 )

[node name="VolumeSlider" type="HSlider" parent="All"]
margin_left = 20.0
margin_top = -115.0
margin_right = 320.0
margin_bottom = -65.0
min_value = -10.0
max_value = 20.0
value = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VolumeLabel" type="Label" parent="All"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -210.0
margin_top = -135.0
margin_right = -4.99998
margin_bottom = -91.0
rect_pivot_offset = Vector2( 60, 22.0001 )
custom_fonts/font = SubResource( 10 )
text = "Volume:"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QualityLabel" type="Label" parent="All"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -294.0
margin_top = -69.9998
margin_right = -4.0
margin_bottom = -25.9998
rect_pivot_offset = Vector2( 60, 22.0001 )
custom_fonts/font = SubResource( 10 )
text = "Qualidade:"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LowOptionButton" type="Button" parent="All"]
margin_left = 25.0
margin_top = -50.0
margin_right = 175.0
margin_bottom = 3.8147e-06
custom_styles/hover = SubResource( 11 )
custom_styles/pressed = SubResource( 12 )
custom_styles/disabled = SubResource( 13 )
custom_styles/normal = SubResource( 14 )
custom_fonts/font = SubResource( 16 )
toggle_mode = true
text = "Baixa"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MediumOptionButton" type="Button" parent="All"]
margin_left = 180.0
margin_top = -50.0
margin_right = 330.0
margin_bottom = 3.8147e-06
custom_styles/hover = SubResource( 11 )
custom_styles/pressed = SubResource( 12 )
custom_styles/disabled = SubResource( 17 )
custom_styles/normal = SubResource( 14 )
custom_fonts/font = SubResource( 16 )
toggle_mode = true
pressed = true
text = "MÃ©dia"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OutTimer" type="Timer" parent="."]
[connection signal="pressed" from="All/ReturnButton" to="." method="_on_ReturnButton_pressed"]
[connection signal="value_changed" from="All/VolumeSlider" to="." method="_on_VolumeSlider_value_changed"]
[connection signal="pressed" from="All/LowOptionButton" to="." method="_on_LowOptionButton_pressed"]
[connection signal="pressed" from="All/MediumOptionButton" to="." method="_on_MediumOptionButton_pressed"]
[connection signal="timeout" from="OutTimer" to="." method="_on_OutTimer_timeout"]
